[gd_scene load_steps=3 format=3 uid="uid://i002yyu61v4j"]

[ext_resource type="FontFile" uid="uid://nkfl4wl2efec" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="1_evlrd"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_qc7od"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qc7od")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.5
offset_top = -251.0
offset_right = 75.5
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="btn_start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../btn_quit")
theme_override_fonts/font = ExtResource("1_evlrd")
text = "Start"

[node name="btn_options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_evlrd")
text = "Options"

[node name="btn_quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../btn_start")
theme_override_fonts/font = ExtResource("1_evlrd")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_quit" to="." method="_on_btn_quit_pressed"]
